[package]
name = "muda"
version = "0.0.0"
description = "Menu Utilities for Desktop Applications"
edition = "2021"
keywords = ["windowing", "menu"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/amrbashir/muda"
documentation = "https://docs.rs/muda"
categories = ["gui"]

[dependencies]
crossbeam-channel = "0.5"
once_cell = "1.10"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.34"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Globalization"
]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[dev-dependencies]
winit = { git = "https://github.com/rust-windowing/winit" }
tao = { git = "https://github.com/tauri-apps/tao", branch = "muda/disable-gtk-menu-creation" }
