[package]
name = "muda"
version = "0.5.0"
description = "Menu Utilities for Desktop Applications"
edition = "2021"
keywords = [ "windowing", "menu" ]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/amrbashir/muda"
documentation = "https://docs.rs/muda"
categories = [ "gui" ]

[dependencies]
crossbeam-channel = "0.5"
keyboard-types = "0.6"
once_cell = "1"
thiserror = "1"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_SystemServices"
]

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.16"
gdk = "0.16"
gdk-pixbuf = "0.16"
libxdo = "0.6.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"
png = "0.17"

[dev-dependencies]
winit = "0.28"
tao = { git = "https://github.com/tauri-apps/tao", branch = "muda" }
image = "0.24"
