[package]
name = "muda"
version = "0.8.2"
description = "Menu Utilities for Desktop Applications"
edition = "2021"
keywords = [ "windowing", "menu" ]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/amrbashir/muda"
documentation = "https://docs.rs/muda"
categories = [ "gui" ]

[features]
default = [ "libxdo" ]
libxdo = [ "dep:libxdo" ]
common-controls-v6 = [ "windows-sys/Win32_UI_Controls" ]
serde = [ "dep:serde" ]

[dependencies]
crossbeam-channel = "0.5"
keyboard-types = "0.6"
once_cell = "1"
thiserror = "1"
serde = { version = "1", optional = true }

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_SystemServices",
  "Win32_UI_HiDpi",
  "Win32_System_LibraryLoader"
]

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
gdk = "0.16"
gdk-pixbuf = "0.16"
libxdo = { version = "0.6.0", optional = true }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
objc = "0.2"
png = "0.17"

[dev-dependencies]
winit = "0.28"
tao = { git = "https://github.com/tauri-apps/tao", branch = "muda" }
wry = { git = "https://github.com/tauri-apps/wry", branch = "tao-v0.22" }
image = "0.24"
