[package]
name = "windows-common-controls-v6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muda = { path = "../../", features = ["common-controls-v6"] }
winit = "0.29"
image = "0.24"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.52"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"]

[build-dependencies]
embed-resource = "2"
